Metin linkleri oluşturuldu

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -8,7 +8,9 @@
     <nav>
         <a href="{% url 'home' %}">Home</a> |
         <a href="{% url 'about' %}">About</a> |
-        <a href="{% url 'connect' %}">Connect</a> |
     </nav>
+    {% block content %}
+
+    {% endblock %}
   </body>
 </html>
