--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-<div>
-    <h1><a href="/">Ebru ARSLAN</a></h1>
-</div>
 {% block content %}
-  <h2>HİKAYELER</h2>
-    {% for post in posts %}
-      <a href=/posts/>{{ post }}</a><br/>
+</br>
+  {% for post in posts %}
+    <a href="{% url 'content' post.id %}">{{ post.title }}</a></br>
+    <h1>{{ post.author }}</h1>
+    <h1>{{ post.created_date }}</h1>
   {% endfor %}
+
 {% endblock %}
